--- a/research.Rmd
+++ b/research.Rmd
@@ -78,7 +78,7 @@ More generally, my scientific interests also include the following topics:
 
 
 
-```{r echo = FALSE, echo=FALSE, message=FALSE, warning=FALSE, echo=FALSE, fig.width=10, fig.align='center', fig.cap="**Cumulative citations and publications number, automatically scrapped from Google Scholar.**"}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.width=10, fig.align='center', fig.cap="**Cumulative citations and publications number, automatically scrapped from Google Scholar.**"}
 library(plotly)
 library(scholar)
 
