--- a/research.Rmd
+++ b/research.Rmd
@@ -149,8 +149,53 @@ Sperduti, M.\*, Arcangeli, M.\*, **Makowski, D.**, Wantzen, P., Zalla, T., Lemai
 **Makowski, D.**, Sperduti, M., Blanchet, S., Nicolas, S. & Piolino, P. (2015). [Régulation Emotionnelle face au Déclin Cognitif dans le Vieillissement : Un Faux Paradoxe ? | Emotion regulation and the cognitive decline in aging: beyond the paradox](https://dominiquemakowski.github.io/papers/makowski2015.pdf). *Gériatrie et Psychologie Neuropsychiatrie du Vieillissement*, 13 (3), 301-8.
 
 
+---------
+
+# Public Popularisation
+
+- Public Debate, [*Art & science discussion on sensory illusions*](http://www.facts-bordeaux.fr/FESTIVAL/Programme/Agenda-2017/Rencards-du-savoir-Les-illusions-sensorielles). 24 November 2017, Bordeaux,France.
+- Magazine, [*Neuroanatomie de la réalité : quand le réel n’est plus*](https://biblineuropsy.com/2016/04/19/les-yeux-brouilles/). 2016, Les yeux brouillés, 1, 48-55.
+- National TV, [*The effect of violent images on the brain and body*](https://www.youtube.com/watch?v=ihGs1V9kz4w). 2015, Testé sous contrôle médical, France 4
+- Online journal, [*”Avengers, l’ère d’Ultron” en 3D : aussitôt vu, aussitôt oublié ?*](http://blog.francetvinfo.fr/actu-cine/2015/05/07/avengers-lere-dultron-en-3d-aussitot-vu-aussitot-oublie.html) 2015, francetvinfos.fr
 
 
+---------
 
+# Talks
 
+<p align="center">*2017*</p>
+
+**Makowski, D.**, Sperduti, M., Nicolas, S. & Piolino, P. (2017). *Vers la thérapie neurocognitive ? L’apport des neurosciences affectives dans la TCC*. 45ème congrès de l’AFTCC, 14-16 December, Paris, France.
+
+Sperduti, M., **Makowski, D.** & Piolino, P. (2017). *The Role of Self-Relevance and Interindividual Variability in Executive Functions in Implicit Emotion Regulation*. International Society for the Study of Interindividual Differences (ISSID), 24-28 July, Warsaw, Poland.
+
+Tuena, C., Serino, S., Gaston-Bellegarde, A., Orriols, E., **Makowski, D.**, Riva, G. & Piolino, P. (2017). *How Virtual Embodiment Affects Episodic Memory Functioning: a Proof-of-Concept Study*, 27 June, Milano, Italy.
+
+**Makowski, D.**, Sperduti, M. & Piolino, P. (2017). *The Distinctive Effect of Emotion Regulation andMindfulness on Attentional Capture*. 1ère Journée Scientifique des Jeunes Chercheurs du Centre de Recherches sur la Cognition et l’Apprentissage, 8 June, Poitiers, France.
+
+<p align="center">*2016*</p>
+
+**Makowski, D.**, Sperduti, M. & Piolino, P. (2016).*”Being there” and Remembering it: Presence en-hances Encoding in Memory*. International Congress On Memory (ICOM), 17-22 July, Budapest, Hungary.
+
+**Makowski, D.**, Sperduti, M. & Piolino, P. (2016). *The Sense of Reality as a feature of proto-Consciousness, its Alteration and Generation induced by Fictional Worlds*. Literary States of Consciousness, 2 June, Paris, France.
+
+**Makowski, D.**, Sperduti, M. & Piolino, P. (2016). *Does Mindfulness ability differently affect Implicit and Explicit Emotion Regulation?* 2nd International Conference on Mindfulness (ICM), 11-15 May,Roma, Italy.
+
+Sperduti, M., **Makowski, D.** & Piolino, P. (2016). *Does mindfulness enhances interoception? Dissociation between different interoceptive abilities*. 2nd International Conference on Mindfulness, 11-15May, Roma, Italy.
+
+<p align="center">*2015*</p>
+
+**Makowski, D.**, Sperduti, M. & Piolino, P. (2015). *Bon et Mauvais Régulateurs Emotionnels: Un RôleSpécifique de l’Inhibition ?* 56è Congrès National de la Société Française de Psychologie (SFP), 2-4 September, Strasbourg, France.
+ 
+**Makowski, D.**, Sperduti, M., Pelletier, J. & Piolino, P. (2015). *Régulation émotionnelle et Self Control : De la recherche Fondamentale à l’Application Clinique*. 1er Congrès Francophone de TCC, 27-29 May, Lyon, France.
+
+<p align="center">*2014*</p>
+ 
+**Makowski, D.**, Sperduti, M., Arcangeli, M., Pelletier, J. & Piolino, P. (2014). *From Philosophy to the Rehabilitation of Psychiatric Patients: Fiction/Reality, Emotion et Cognitive Control*. Journée d’hiver de l’IUPDP, 19 December, Boulogne-Billancourt, France.
+ 
+**Makowski, D.**, Sperduti, M. & Piolino, P. (2014). *L’émotion face à la fiction : l’étude de patientsschizophrènes éclaire le paradoxe de la fiction*. 27 June, Fête de la Recherche, Boulogne-Billancourt,France.
+ 
+<p align="center">*2013*</p>
+ 
+**Makowski, D.**, & Rossi, S. (2013). [*Le jugement esthétique chez l’enfant*](https://www.youtube.com/watch?v=Hvs7t5G_dLM). Journées Neurosciences, Esthétique, et Complexité, 28 September, Paris, France.
 
