--- a/about.Rmd
+++ b/about.Rmd
@@ -13,8 +13,8 @@ title: "About me."
 <!-- </div> -->
 
 
-```{r, out.width = "600px", echo = FALSE, eval = TRUE, fig.align='center', fig.cap="**Showing some ground-breaking results.**"}
-knitr::include_graphics("media/conf4.jpg")
+```{r, out.width = "800px", echo = FALSE, eval = TRUE, fig.align='center', fig.cap="**Pondering on the nature of reality.**"}
+knitr::include_graphics("media/conf5.jpg")
 # USE rmarkdown::render_site(encoding = "UTF-8") to render the website. Then push with github.
 ```
 
