--- a/research.Rmd
+++ b/research.Rmd
@@ -240,6 +240,12 @@ Sperduti, M.\*, Arcangeli, M.\*, **Makowski, D.**, Wantzen, P., Zalla, T., Lemai
 
 # Talks
 
+<p align="center">*2018*</p>
+
+**Makowski, D.** (2018, *invited*). *How Reality can Modulate Memory and Emotions*. CRPCPO's monthly seminar, 23 March, Amiens, France.
+
+**Makowski, D.**, Sperduti, M., Nicolas, S. & Piolino, P. (2018). *Engagement in Fiction as an Altered State of Consciousness*. 6th Mind, Brain & Body Symposium, 15-16 March, Berlin, Germany.
+
 <p align="center">*2017*</p>
 
 **Makowski, D.**, Sperduti, M., Nicolas, S. & Piolino, P. (2017). *Vers la thérapie neurocognitive ? L’apport des neurosciences affectives dans la TCC*. 45ème congrès de l’AFTCC, 14-16 December, Paris, France.
